Implements javascript bindings to the html input elements

--- a/src/main/resources/public/todo.html
+++ b/src/main/resources/public/todo.html
@@ -39,7 +39,9 @@
 
         <br>
 
-        <button type="button" id="getAll">Get!</button>
+        <button type="button" id="getTodos">Get!</button> <br>
+        OR get TODO by id: <input type="text" id="todo_getby_id"><button type="button" id="getTodoByID">Get By ID</button> <br>
+
     </form>
 
 
